*) restructuring of chart-servlet to be MA spec compliant The specification defines that |> # mon.statusvariable.value: The value of the StatusVariable, represented as a String but the Apache Felix implementation currently returns the value as Float/Integer/Boolean or String.
To be compatible with other implementations the chart-sevlet now can also handle values delivered as string.

git-svn-id: svn://svn.paxle.net/paxle/trunk@1740 f5d3ab42-bacf-4b1a-9692-565be65a0cfe